--- a/app/views/system/editjobparameters.html
+++ b/app/views/system/editjobparameters.html
@@ -15,7 +15,7 @@
 	</div>
   	<form class="form-horizontal" ng-submit="submit()">
 	    <fieldset>
-	       <div class="control-group">
+	       <div class="control-group" ng-show="formData.displayName !='Middleware'" >
                 <label class="control-label">{{'label.job.reportname' | translate }}<span class="required">*</span></label>
                 <div class="controls">
                   <select ng-model="jobparameters.batchName"  ng-options="reportData.batchName as reportData.batchName for reportData in reportDatas" value="{{office.id}}" >
@@ -63,6 +63,34 @@
                 <div class="controls">
                 <input type="text" ng-model="jobparameters.emailId">
                 </div>
+           </div>
+           <div class="control-group" ng-show="formData.displayName =='Middleware'">             
+               <label class="control-label">{{ 'label.job.ProvSystem' | translate }}<span class="required">*</span></label>
+                <!-- <div class="controls">
+                <input type="text" ng-model="jobparameters.provSystem">
+                </div> -->          
+                <div class="controls">
+                  <select ng-model="jobparameters.provSystem"  ng-options="provisionSystemData.provisioingSystem as provisionSystemData.provisioingSystem for provisionSystemData in provisionSysData" value="{{provisionSystemData.provisioingSystem}}">
+                </select>
+                </div>    
+           </div>
+           <div class="control-group" ng-show="formData.displayName =='Middleware'">              
+               <label class="control-label">{{ 'label.job.url' | translate }}<span class="required">*</span></label>
+                <div class="controls">
+                <input type="text" ng-model="jobparameters.url">
+                </div>               
+           </div>
+           <div class="control-group" ng-show="formData.displayName =='Middleware'">              
+                <label class="control-label">{{ 'label.job.username' | translate }}<span class="required">*</span></label>
+                <div class="controls">
+                <input type="text" ng-model="jobparameters.username">
+                </div>          
+           </div>
+           <div class="control-group" ng-show="formData.displayName =='Middleware'">              
+                <label class="control-label">{{ 'label.job.password' | translate }}<span class="required">*</span></label>
+                <div class="controls">
+                <input type="text" ng-model="jobparameters.password">
+                </div>              
            </div>
            <div class="control-group">
                 <label class="control-label" for="isDynamic">{{ 'label.job.isDynamic' | translate }}</label>
