--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -351,7 +351,7 @@
 	<div class="modal-header silver">
         <h3 class="bolder">{{'label.disconnectorder' | translate}}</h3>
     </div>
-    <div class="modal-body modal-big" style="height:270px;">
+    <div class="modal-body" style="height:300px;">
        <fieldset>
      	<div class="control-group">
             <label class="control-label" style="color:red;" ng-show="orderError.length>0">{{orderError | translate}}</label>
@@ -437,7 +437,7 @@
                     <div class="modal-header silver">
                         <h3 class="bolder">{{'dialog.provisioning.title.message' | translate}}</h3>
                     </div>
-                    <div class="modal-body modal-big" style="height:270px;">
+                    <div class="modal-body" style="height:330px;">
 
                          <div class="error" ng-show="errorStatus || errorDetails">
 		                 <label>{{'label.contract.error' | translate}}</label>
@@ -470,7 +470,7 @@
 	<div class="modal-header silver">
         <h3 class="bolder">{{'label.promo' | translate}}</h3>
     </div>
-    <div class="modal-body modal-big">
+    <div class="modal-body"  style="height:200px;">
        <fieldset>
 		<div class="control-group">
             <label class="control-label" style="color:red;" ng-show="renewError.length>0">{{renewError | translate}}</label>
@@ -483,10 +483,12 @@
               <select ng-model="formData.promoId"  ng-options="promoData.id as promoData.promotionDescription for promoData in promoDatas" value="{{disconnectDetail.mCodeValue}}"></select>
             </div>
         </div>
-                <div class="modal-footer">
-                        <button class="btn btn-warning" ng-click="rejectProvisioning()">{{'button.cancel' | translate}}</button>
-                        <button class="btn btn-primary" ng-click="accept()">{{'label.confirm' | translate}}</button>
-                    </div>
+		</fieldset>
+    </div>
+   <div class="modal-footer">
+         <button class="btn btn-warning" ng-click="rejectProvisioning()">{{'button.cancel' | translate}}</button>
+         <button class="btn btn-primary" ng-click="accept()">{{'label.confirm' | translate}}</button>
+   </div>
 </script>      
       
 </div>
