validation for future transaction in make payments

--- a/app/views/system/viewschedulerjob.html
+++ b/app/views/system/viewschedulerjob.html
@@ -6,13 +6,13 @@
 	        <li class="active">{{job.displayName}}</li>
 	    </ul>
 	</div>
-    <!--<div class="pull-right">
+    <div class="pull-right">
       <div class="btn-group">
           <a href="#/editschedulerjob/{{job.jobId}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>
           <a  ng-hide="job.displayName == 'Requestor' || job.displayName =='Responser'" href="#/editjobparameters/{{job.jobId}}" class="btn btn-primary"><i class=""></i>Edit Job Parameters</a>
           <a href="#/viewhistory/{{job.jobId}}" class="btn btn-primary"><i class=""></i> view history</a>
       </div>
-    </div>-->
+    </div>
 
 	<div class="row paddedleft">
 		<h3>{{employee.displayName}}</h3>
