--- a/app/views/organization/createpromotioncode.html
+++ b/app/views/organization/createpromotioncode.html
@@ -1,18 +1,18 @@
       <div>
         <ul class="breadcrumb">
           <li><a href="#/organization">{{'link.admin.organisation' | translate}}</a> <span class="divider">/</span></li>
-          <li><a href="#/discounts">{{'label.managediscounts' | translate}}</a> <span class="divider">/</span></li>
-          <li class="active">{{'label.creatediscount' | translate}}</li>
+         <li><a href="#/discounts">{{'label.managediscounts' | translate}}</a> <span class="divider">/</span></li>
+          <li class="active">Create Promotion Code</li>
         </ul>
       </div>
-      <form class="form-horizontal well" ng-controller="CreateDiscountsController" ng-submit="submit()">
+      <form class="form-horizontal well" ng-controller="CreatePromotionController" ng-submit="submit()">
        <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
         <fieldset>
-          <legend>Create Discount</legend>
+          <legend>Create PromotionCode</legend>
 			<table>
 			<tr>
 				<td>
@@ -20,12 +20,12 @@
 						<tr>
 							<td>
 								<div class="control-group">
-           					 	<label class="control-label" for="discountCode">{{ 'label.discountCode' | translate }}</label>
+           					 	<label class="control-label" for="promotionCode">Promotion Code</label>
             					<div class="controls">
-             					 <input type="text" id="discountCode" ng-model="formData.discountCode">
+             					 <input type="text" id="promotionCode" ng-model="formData.promotionCode"/>
            						</div>
          						</div>	
-							</td>
+							 </td>
 							<td>
 								<div class="control-group">
             					<label class="control-label" for="discountType">{{ 'label.discountType' | translate }}</label>
@@ -39,12 +39,43 @@
 							<tr>
 							<td>
 								<div class="control-group">
-            					<label class="control-label" for="discountDescription">{{ 'label.discountDescription' | translate }}</label>
+            					<label class="control-label" for="promotiondesc">Promotion Description</label>
             					<div class="controls">
-              					<input type="text" id="discountDescription" ng-model="formData.discountDescription">
+             					 <input type="text" id="promotiondesc" ng-model="formData.promotiondesc"/>
+           						</div>
+          						</div>
+							</td>
+							<td>
+								<div class="control-group">
+            					<label class="control-label" for="promotionduration">Duration Type</label>
+            					<div class="controls">
+              					<input type="text" id="promotionduration" ng-model="formData.promotionduration">
+            					</div>
+          						</div>
+							</td>
+							</tr>
+							<tr>
+							<td>
+								<div class="control-group">
+            					<label class="control-label" for="promotionduration">Duration</label>
+            					<div class="controls">
+              					<input type="text" id="promotionduration" ng-model="formData.promotionduration">
            						 </div>
           						</div>
 							</td>
+							
+							<td>
+								<div class="control-group">
+            					<label class="control-label" for="promotiontype">Promotion Type</label>
+            					<div class="controls">
+              					<input type="text" id="promotiontype" ng-model="formData.promotiontype">
+           						 </div>
+          						</div>
+							</td>
+							
+							</tr>
+							<tr>
+							
 							<td>
 								<div class="control-group">
             					<label class="control-label" for="discountRate">{{ 'label.discountRate' | translate }}</label>
@@ -53,8 +84,7 @@
             					</div>
           						</div>
 							</td>
-							</tr>
-							<tr>
+							
 							<td>
 								<div class="control-group">
                         		<label class="control-label">{{ 'label.startDate' | translate }}</label>
@@ -64,15 +94,7 @@
                         		</div>
           						</div>
 							</td>
-							<td>
-								<div class="control-group">
-            					<label class="control-label" for="status">{{ 'label.status' | translate }}</label>
-            					<div class="controls">
-             					 <select ng-model="formData.status"  ng-options="status.value as status.value for status in statuses" value="{{status.value}}">
-             					 </select>
-            					</div>
-          						</div>
-								</td>
+							
 							</tr>
 							
 					</table>
