--- a/app/views/organization/discounts.html
+++ b/app/views/organization/discounts.html
@@ -3,11 +3,83 @@
         <li><a href="#/organization">{{'link.admin.organisation' | translate}}</a> <span class="divider">/</span></li>
         <li class="active">{{'label.managediscounts' | translate}}&nbsp;&nbsp;{{employee.lastname}}</li>
     </ul>
-    <div class="pull-right">
+    <!-- <div class="pull-right">
         <a href="#/creatediscounts" class="btn btn-primary"><i class="icon-plus icon-white"></i> {{ 'link.create.new.discount' | translate }}</a>
-    </div>
+    </div> -->
 </div>
 <div class="row-fluid" ng-controller="DiscountsController">
+<tabset  style="margin-bottom: 0px;">
+     <tab heading="Dicount" select="getDicounts()" active="DicountTab">
+        <div class="pull-right">
+        <a href="#/creatediscounts" class="btn btn-primary"><i class="icon-plus icon-white"></i> {{ 'link.create.new.discount' | translate }}</a>
+       </div> 
+       <div>
+        <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+        <br>
+        <table class="table">
+        <thead>
+            <tr class="graybg">
+                <th>{{ 'table.heading.id' | translate }}</th>
+                <th>{{ 'table.heading.discountCode' | translate }}</th>
+                <th>{{ 'table.heading.discountDescription' | translate }}</th>
+                <th>{{ 'table.heading.discountType' | translate }}</th>
+                <th>{{ 'table.heading.discountRate' | translate }}</th>
+                <th>{{ 'table.heading.startDate' | translate }}</th>
+                <th>{{ 'table.heading.status' | translate }}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="pointer-main" ng-repeat="discount in discounts | filter:filterText">
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountMasterId}}</td>
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountCode}}</td>
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountDescription}}</td>       
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discounType}}</td>         
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountRate}}</td>        
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountStartDate|DateFormat}}</td>         
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountstatus}}</td>               
+            </tr>
+        </tbody>
+    </table>
+         </div>
+      </tab>
+      <tab heading="PromotionCode" select="getPromotionCodes()" active="PromotionCodeTab">
+        <div class="pull-right">
+        <a href="#/createpromotion" class="btn btn-primary"><i class="icon-plus icon-white"></i>Create PromotionCode</a>
+       </div> 
+       <div>
+        <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+        <br>
+        <table class="table">
+        <thead>
+            <tr class="graybg">
+                <th>{{ 'table.heading.id' | translate }}</th>
+                <th>Promotion Code</th>
+                <th>Description</th>
+                <th>Duration Type</th>
+                <th>Duration</th>
+                <th>Discount Type</th>
+                <th>Discount Rate</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="pointer-main" ng-repeat="promotiondadata in promotiondatas | filter:filterText">
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{promotiondadata.id}}</td>
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{promotiondadata.promotionCode}}</td>
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{promotiondadata.promotionDescription}}</td>       
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{promotiondadata.durationType}}</td>         
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{promotiondadata.duration}}</td>  
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{promotiondadata.promotionType}}</td> 
+                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{promotiondadata.discountRate}}</td>         
+                             
+            </tr>
+        </tbody>
+    </table>
+         </div>
+      </tab>
+    </tabset>
+</div>
+
+<!-- <div class="row-fluid" ng-controller="DiscountsController">
     <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
 	<table class="table">
         <thead>
@@ -33,4 +105,4 @@
             </tr>
         </tbody>
     </table>
-</div>
+</div> -->
