--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -172,8 +172,8 @@
           </table>
      
           <div class="offset3">
-            <a href="#/viewclient/{{clientId}}"><button type="reset" class="btn">Cancel</button></a>
-
+            
+               <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
            <button type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button>
 
           </div>
