--- a/app/views/organization/creatediscounts.html
+++ b/app/views/organization/creatediscounts.html
@@ -82,7 +82,7 @@
 			</table>
   			
           <div class="offset3">
-            <a href="#/discounts"><button type="reset" ng-click="reset123()" class="btn">{{'button.cancel'| translate}}</button></a>
+            <a href="#/discounts"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
             <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
