--- a/app/views/organization/discounts.html
+++ b/app/views/organization/discounts.html
@@ -7,17 +7,17 @@
         <a href="#/creatediscounts" class="btn btn-primary"><i class="icon-plus icon-white"></i> {{ 'link.create.new.discount' | translate }}</a>
     </div> -->
 </div>
-<div class="row-fluid" ng-controller="DiscountsController">
+<div  ng-controller="DiscountsController">
 <tabset  style="margin-bottom: 0px;">
-     <tab heading="Discounts" select="getDicounts()" active="DicountTab">
+     <tab heading="{{'tab.discount' | translate}}" select="getDicounts()">
         <div class="pull-right">
-        <a href="#/creatediscounts" class="btn btn-primary"><i class="icon-plus icon-white"></i> {{ 'link.create.new.discount' | translate }}</a>
+          <a href="#/creatediscounts" class="btn btn-primary"><i class="icon-plus icon-white"></i> {{ 'link.create.new.discount' | translate }}</a>
        </div> 
        <div>
-        <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
-        <br>
+           <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+           <br>
         <table class="table">
-        <thead>
+          <thead>
             <tr class="graybg">
                 <th>{{ 'table.heading.id' | translate }}</th>
                 <th>{{ 'table.heading.discountCode' | translate }}</th>
@@ -27,54 +27,53 @@
                 <th>{{ 'table.heading.startDate' | translate }}</th>
                 <th>{{ 'table.heading.status' | translate }}</th>
             </tr>
-        </thead>
-        <tbody>
-            <tr class="pointer-main" ng-repeat="discount in discounts | filter:filterText">
-                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountMasterId}}</td>
-                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountCode}}</td>
-                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountDescription}}</td>       
-                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discounType}}</td>         
-                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountRate}}</td>        
-                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountStartDate|DateFormat}}</td>         
-                <td class="pointer" data-ng-click="routeTo(discount.discountMasterId)">{{discount.discountstatus}}</td>               
-            </tr>
-        </tbody>
-    </table>
-         </div>
+          </thead>
+          <tbody>
+             <tr class="pointer-main" ng-repeat="discount in discounts | filter:filterText">
+                <td class="pointer" data-ng-click="routeToDiscounts(discount.discountMasterId)">{{discount.discountMasterId}}</td>
+                <td class="pointer" data-ng-click="routeToDiscounts(discount.discountMasterId)">{{discount.discountCode}}</td>
+                <td class="pointer" data-ng-click="routeToDiscounts(discount.discountMasterId)">{{discount.discountDescription}}</td>       
+                <td class="pointer" data-ng-click="routeToDiscounts(discount.discountMasterId)">{{discount.discounType}}</td>         
+                <td class="pointer" data-ng-click="routeToDiscounts(discount.discountMasterId)">{{discount.discountRate}}</td>        
+                <td class="pointer" data-ng-click="routeToDiscounts(discount.discountMasterId)">{{discount.discountStartDate|DateFormat}}</td>         
+                <td class="pointer" data-ng-click="routeToDiscounts(discount.discountMasterId)">{{discount.discountstatus}}</td>               
+             </tr>
+          </tbody>
+         </table>
+        </div>
       </tab>
-      <tab heading="PromotionCode" select="getPromotionCodes()" active="PromotionCodeTab">
+      <tab heading="{{'tab.PromotionCode' | translate}}" select="getPromotionCodes()" active="PromotionCodeTab">
         <div class="pull-right">
-        <a href="#/createpromotion" class="btn btn-primary"><i class="icon-plus icon-white"></i>Create PromotionCode</a>
-       </div> 
-       <div>
-        <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
-        <br>
-        <table class="table">
-        <thead>
-            <tr class="graybg">
+           <a href="#/createpromotion" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{ 'link.create.new.PromotionCode' | translate }}</a>
+        </div> 
+        <div>
+            <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+             <br>
+          <table class="table">
+            <thead>
+              <tr class="graybg">
                 <th>{{ 'table.heading.id' | translate }}</th>
-                <th>Promotion Code</th>
-                <th>Description</th>
-                <th>Duration Type</th>
-                <th>Duration</th>
-                <th>Discount Type</th>
-                <th>Discount Rate</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="pointer-main" ng-repeat="promotiondadata in promotiondatas | filter:filterText">
-                <td class="pointer">{{promotiondadata.id}}</td>
-                <td class="pointer" >{{promotiondadata.promotionCode}}</td>
-                <td class="pointer" >{{promotiondadata.promotionDescription}}</td>       
-                <td class="pointer" >{{promotiondadata.durationType}}</td>         
-                <td class="pointer" >{{promotiondadata.duration}}</td>  
-                <td class="pointer" >{{promotiondadata.promotionType}}</td> 
-                <td class="pointer" >{{promotiondadata.discountRate}}</td>         
-                             
-            </tr>
-        </tbody>
-    </table>
-         </div>
+                <th>{{ 'table.heading.PromotionCode' | translate }}</th>
+                <th>{{ 'table.heading.promotionDescription' | translate }}</th>
+                <th>{{ 'table.heading.DurationType' | translate }}</th>
+                <th>{{ 'table.heading.Duration' | translate }}</th>
+               <th>{{ 'table.heading.discountType' | translate }}</th>
+                <th>{{ 'table.heading.discountRate' | translate }}</th>
+              </tr>
+            </thead>
+            <tbody>
+               <tr class="pointer-main" ng-repeat="promotiondadata in promotiondatas | filter:filterText">
+                <td class="pointer" data-ng-click="routeToPromotion(promotiondadata.id)">{{promotiondadata.id}}</td>
+                <td class="pointer" data-ng-click="routeToPromotion(promotiondadata.id)">{{promotiondadata.promotionCode}}</td>
+                <td class="pointer" data-ng-click="routeToPromotion(promotiondadata.id)">{{promotiondadata.promotionDescription}}</td>       
+                <td class="pointer" data-ng-click="routeToPromotion(promotiondadata.id)">{{promotiondadata.durationType}}</td>         
+                <td class="pointer" data-ng-click="routeToPromotion(promotiondadata.id)">{{promotiondadata.duration}}</td>  
+                <td class="pointer" data-ng-click="routeToPromotion(promotiondadata.id)">{{promotiondadata.discountType}}</td> 
+                <td class="pointer" data-ng-click="routeToPromotion(promotiondadata.id)">{{promotiondadata.discountRate}}</td>         
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </tab>
     </tabset>
 </div>
